feat: implement navbar component & alias path

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -6,4 +6,8 @@
 	h1 {
 		@apply text-xl font-bold text-center text-sky-800;
 	}
+
+	nav a {
+		@apply text-center text-white font-light text-lg;
+	}
 }
