--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,6 +3,14 @@
 @tailwind utilities;
 
 @layer {
+	body {
+		@apply flex flex-col;
+	}
+
+	main {
+		@apply flex flex-col max-w-6xl px-3 md:px-5 w-full mx-auto pb-7;
+	}
+
 	h1 {
 		@apply text-xl font-bold text-center text-sky-800;
 	}
