--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -7,12 +7,20 @@
 		@apply flex flex-col;
 	}
 
+	p {
+		@apply font-light;
+	}
+
 	main {
-		@apply flex flex-col max-w-6xl px-3 md:px-5 w-full mx-auto pb-7;
+		@apply flex flex-col w-full mx-auto pb-7;
+	}
+
+	.container {
+		@apply max-w-6xl px-3 md:px-5 w-full mx-auto;
 	}
 
 	h1 {
-		@apply text-xl font-bold text-center text-sky-800;
+		@apply !text-3xl md:!text-4xl lg:!text-5xl font-bold;
 	}
 
 	nav a {
