--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -23,6 +23,10 @@
 		@apply !text-3xl md:!text-4xl lg:!text-5xl font-bold;
 	}
 
+	h3 {
+		@apply !text-2xl md:!text-3xl  font-bold;
+	}
+
 	nav a {
 		@apply text-center text-white font-light text-lg;
 	}
